--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/templates/eos/router-isis.j2
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/templates/eos/router-isis.j2
@@ -79,10 +79,19 @@ router isis {{ router_isis.instance }}
 {%     endif %}
 {%     if router_isis.spf_interval.interval is arista.avd.defined %}
 {%         set spf_interval_cli = "spf-interval " ~ router_isis.spf_interval.interval %}
+{%         if router_isis.spf_interval.interval_unit is arista.avd.defined %}
+{%             set spf_interval_cli = spf_interval_cli ~ " " ~ router_isis.spf_interval.interval_unit %}
+{%         endif %}
 {%         if router_isis.spf_interval.wait_interval is arista.avd.defined %}
 {%             set spf_interval_cli = spf_interval_cli ~ " " ~ router_isis.spf_interval.wait_interval %}
+{%             if router_isis.spf_interval.interval_unit is arista.avd.defined %}
+{%                 set spf_interval_cli = spf_interval_cli ~ " milliseconds" %}
+{%             endif %}
 {%             if router_isis.spf_interval.hold_interval is arista.avd.defined %}
 {%                 set spf_interval_cli = spf_interval_cli ~ " " ~ router_isis.spf_interval.hold_interval %}
+{%                 if router_isis.spf_interval.interval_unit is arista.avd.defined %}
+{%                     set spf_interval_cli = spf_interval_cli ~ " milliseconds" %}
+{%                 endif %}
 {%             endif %}
 {%         endif %}
    {{ spf_interval_cli }}
