--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/templates/eos/logging.j2
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/templates/eos/logging.j2
@@ -93,11 +93,9 @@ logging source-interface {{ logging.source_interface }}
 {%     for match_list in logging.policy.match.match_lists | arista.avd.natural_sort('name') %}
 logging policy match match-list {{ match_list.name }} {{ match_list.action }}
 {%     endfor %}
-{%     if logging.level is arista.avd.defined %}
-{%         for level in logging.level | arista.avd.natural_sort('facility_name') %}
-{%             set logging_cli = "logging" %}
-{%             set logging_cli = logging_cli ~ " level " ~ level.facility_name ~ " " ~ level.severity %}
-{{ logging_cli }}
-{%         endfor %}
-{%     endif %}
+{%     for level in logging.level | arista.avd.natural_sort('facility_name') %}
+{%         if level.facility_name is arista.avd.defined and level.severity is arista.avd.defined %}
+logging level {{ level.facility_name }} {{ level.severity }}
+{%         endif %}
+{%     endfor %}
 {% endif %}
