--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/templates/eos/router-bgp.j2
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/templates/eos/router-bgp.j2
@@ -849,6 +849,9 @@ router bgp {{ router_bgp.as }}
 {%         for redistribute_route in router_bgp.address_family_ipv4_multicast.redistribute_routes | arista.avd.natural_sort('source_protocol') %}
 {%             if redistribute_route.source_protocol is arista.avd.defined %}
 {%                 set redistribute_route_cli = "redistribute " ~ redistribute_route.source_protocol %}
+{%                 if redistribute_route.include_leaked is arista.avd.defined and redistribute_route.source_protocol == "isis" %}
+{%                     set redistribute_route_cli = redistribute_route_cli ~ " include leaked" %}
+{%                 endif %}
 {%                 if redistribute_route.route_map is arista.avd.defined %}
 {%                     set redistribute_route_cli = redistribute_route_cli ~ " route-map " ~ redistribute_route.route_map %}
 {%                 elif redistribute_route.source_protocol == "isis" %}
@@ -996,12 +999,12 @@ router bgp {{ router_bgp.as }}
 {%         for redistribute_route in router_bgp.address_family_ipv6_multicast.redistribute_routes | arista.avd.natural_sort('source_protocol') %}
 {%             if redistribute_route.source_protocol is arista.avd.defined %}
 {%                 set redistribute_route_cli = "redistribute " ~ redistribute_route.source_protocol %}
-{%                 if redistribute_route.source_protocol == "bgp" %}
-{%                     set redistribute_route_cli = redistribute_route_cli ~ " leaked" %}
-{%                 elif redistribute_route.include_leaked is arista.avd.defined %}
+{%                 if redistribute_route.include_leaked is arista.avd.defined and redistribute_route.source_protocol == "isis" %}
 {%                     set redistribute_route_cli = redistribute_route_cli ~ " include leaked" %}
 {%                 endif %}
-{%                 if redistribute_route.source_protocol == "isis" %}
+{%                 if redistribute_route.route_map is arista.avd.defined %}
+{%                     set redistribute_route_cli = redistribute_route_cli ~ " route-map " ~ redistribute_route.route_map %}
+{%                 elif redistribute_route.source_protocol == "isis" %}
 {%                     if redistribute_route.rcf is arista.avd.defined %}
 {%                         set redistribute_route_cli = redistribute_route_cli ~ " rcf " ~ redistribute_route.rcf %}
 {%                     endif %}
@@ -1254,11 +1257,17 @@ router bgp {{ router_bgp.as }}
 {%                 for route_target in address_family.route_targets %}
       route-target import {{ address_family.address_family }} {{ route_target }}
 {%                 endfor %}
-{%                 if address_family.route_map is arista.avd.defined %}
+{%                 if address_family.address_family in ['evpn', 'vpn-ipv4', 'vpn-ipv6'] %}
+{%                     if address_family.route_map is arista.avd.defined %}
       route-target import {{ address_family.address_family }} route-map {{ address_family.route_map }}
-{%                 endif %}
-{%                 if address_family.rcf is arista.avd.defined %}
+{%                     endif %}
+{%                     if address_family.rcf is arista.avd.defined %}
+{%                         if address_family.vpn_route_filter_rcf is arista.avd.defined and address_family.address_family in ['vpn-ipv4', 'vpn-ipv6'] %}
+      route-target import {{ address_family.address_family }} rcf {{ address_family.rcf }} vpn-route filter-rcf {{ address_family.vpn_route_filter_rcf }}
+{%                         else %}
       route-target import {{ address_family.address_family }} rcf {{ address_family.rcf }}
+{%                         endif %}
+{%                     endif %}
 {%                 endif %}
 {%             endfor %}
 {%         endif %}
@@ -1267,11 +1276,17 @@ router bgp {{ router_bgp.as }}
 {%                 for route_target in address_family.route_targets %}
       route-target export {{ address_family.address_family }} {{ route_target }}
 {%                 endfor %}
-{%                 if address_family.route_map is arista.avd.defined %}
+{%                 if address_family.address_family in ['evpn', 'vpn-ipv4', 'vpn-ipv6'] %}
+{%                     if address_family.route_map is arista.avd.defined %}
       route-target export {{ address_family.address_family }} route-map {{ address_family.route_map }}
-{%                 endif %}
-{%                 if address_family.rcf is arista.avd.defined %}
+{%                     endif %}
+{%                     if address_family.rcf is arista.avd.defined %}
+{%                         if address_family.vpn_route_filter_rcf is arista.avd.defined and address_family.address_family in ['vpn-ipv4', 'vpn-ipv6'] %}
+      route-target export {{ address_family.address_family }} rcf {{ address_family.rcf }} vpn-route filter-rcf {{ address_family.vpn_route_filter_rcf }}
+{%                         else %}
       route-target export {{ address_family.address_family }} rcf {{ address_family.rcf }}
+{%                         endif %}
+{%                     endif %}
 {%                 endif %}
 {%             endfor %}
 {%         endif %}
@@ -1577,6 +1592,12 @@ router bgp {{ router_bgp.as }}
 {%                 if neighbor.route_map_out is arista.avd.defined %}
          neighbor {{ neighbor.ip_address }} route-map {{ neighbor.route_map_out }} out
 {%                 endif %}
+{%                 if neighbor.rcf_in is arista.avd.defined %}
+         neighbor {{ neighbor.ip_address }} rcf in {{ neighbor.rcf_in }}
+{%                 endif %}
+{%                 if neighbor.rcf_out is arista.avd.defined %}
+         neighbor {{ neighbor.ip_address }} rcf out {{ neighbor.rcf_out }}
+{%                 endif %}
 {#                 TODO: AVD5.0 remove tmp_vrf_neighbor_prefix_list_in and tmp_vrf_neighbor_prefix_list_out #}
 {%                 if neighbor.prefix_list_in is arista.avd.defined %}
          neighbor {{ neighbor.ip_address }} prefix-list {{ neighbor.prefix_list_in }} in
@@ -1620,6 +1641,24 @@ router bgp {{ router_bgp.as }}
 {%                 endif %}
          {{ network_cli }}
 {%             endfor %}
+{%         for redistribute_route in vrf.address_family_ipv4.redistribute_routes | arista.avd.natural_sort('source_protocol') %}
+{%             if redistribute_route.source_protocol is arista.avd.defined %}
+{%                 set redistribute_route_cli = "redistribute " ~ redistribute_route.source_protocol %}
+{%                 if redistribute_route.source_protocol == "bgp" %}
+{%                     set redistribute_route_cli = redistribute_route_cli ~ " leaked" %}
+{%                 elif redistribute_route.include_leaked is arista.avd.defined %}
+{%                     set redistribute_route_cli = redistribute_route_cli ~ " include leaked" %}
+{%                 endif %}
+{%                 if redistribute_route.route_map is arista.avd.defined %}
+{%                     set redistribute_route_cli = redistribute_route_cli ~ " route-map " ~ redistribute_route.route_map %}
+{%                 elif redistribute_route.source_protocol in ["connected", "static", "isis", "user", "dynamic"] %}
+{%                     if redistribute_route.rcf is arista.avd.defined %}
+{%                         set redistribute_route_cli = redistribute_route_cli ~ " rcf " ~ redistribute_route.rcf %}
+{%                     endif %}
+{%                 endif %}
+         {{ redistribute_route_cli }}
+{%             endif %}
+{%         endfor %}
 {%         endif %}
 {%         if vrf.address_family_ipv4_multicast is arista.avd.defined %}
       !
@@ -1650,6 +1689,22 @@ router bgp {{ router_bgp.as }}
 {%                     set network_cli = network_cli ~ " route-map " ~ network.route_map %}
 {%                 endif %}
          {{ network_cli }}
+{%             endfor %}
+{%             for redistribute_route in vrf.address_family_ipv4_multicast.redistribute_routes | arista.avd.natural_sort('source_protocol') %}
+{%                 if redistribute_route.source_protocol is arista.avd.defined %}
+{%                     set redistribute_route_cli = "redistribute " ~ redistribute_route.source_protocol %}
+{%                     if redistribute_route.include_leaked is arista.avd.defined and redistribute_route.source_protocol == "isis" %}
+{%                         set redistribute_route_cli = redistribute_route_cli ~ " include leaked" %}
+{%                     endif %}
+{%                     if redistribute_route.route_map is arista.avd.defined %}
+{%                         set redistribute_route_cli = redistribute_route_cli ~ " route-map " ~ redistribute_route.route_map %}
+{%                     elif redistribute_route.source_protocol == "isis" %}
+{%                         if redistribute_route.rcf is arista.avd.defined %}
+{%                             set redistribute_route_cli = redistribute_route_cli ~ " rcf " ~ redistribute_route.rcf %}
+{%                         endif %}
+{%                     endif %}
+         {{ redistribute_route_cli }}
+{%                 endif %}
 {%             endfor %}
 {%         endif %}
 {%         if vrf.address_family_ipv6 is arista.avd.defined %}
@@ -1690,6 +1745,12 @@ router bgp {{ router_bgp.as }}
 {%                 if neighbor.route_map_out is arista.avd.defined %}
          neighbor {{ neighbor.ip_address }} route-map {{ neighbor.route_map_out }} out
 {%                 endif %}
+{%                 if neighbor.rcf_in is arista.avd.defined %}
+         neighbor {{ neighbor.ip_address }} rcf in {{ neighbor.rcf_in }}
+{%                 endif %}
+{%                 if neighbor.rcf_out is arista.avd.defined %}
+         neighbor {{ neighbor.ip_address }} rcf out {{ neighbor.rcf_out }}
+{%                 endif %}
 {%                 if neighbor.prefix_list_in is arista.avd.defined %}
          neighbor {{ neighbor.ip_address }} prefix-list {{ neighbor.prefix_list_in }} in
 {%                 endif %}
@@ -1703,6 +1764,24 @@ router bgp {{ router_bgp.as }}
 {%                     set network_cli = network_cli ~ " route-map " ~ network.route_map %}
 {%                 endif %}
          {{ network_cli }}
+{%             endfor %}
+{%             for redistribute_route in vrf.address_family_ipv6.redistribute_routes | arista.avd.natural_sort('source_protocol') %}
+{%                 if redistribute_route.source_protocol is arista.avd.defined %}
+{%                     set redistribute_route_cli = "redistribute " ~ redistribute_route.source_protocol %}
+{%                     if redistribute_route.source_protocol == "bgp" %}
+{%                         set redistribute_route_cli = redistribute_route_cli ~ " leaked" %}
+{%                     elif redistribute_route.include_leaked is arista.avd.defined %}
+{%                         set redistribute_route_cli = redistribute_route_cli ~ " include leaked" %}
+{%                     endif %}
+{%                     if redistribute_route.route_map is arista.avd.defined %}
+{%                         set redistribute_route_cli = redistribute_route_cli ~ " route-map " ~ redistribute_route.route_map %}
+{%                     elif redistribute_route.source_protocol in ["connected", "static", "isis", "user", "dynamic"] %}
+{%                         if redistribute_route.rcf is arista.avd.defined %}
+{%                             set redistribute_route_cli = redistribute_route_cli ~ " rcf " ~ redistribute_route.rcf %}
+{%                         endif %}
+{%                     endif %}
+      {{ redistribute_route_cli }}
+{%                 endif %}
 {%             endfor %}
 {%         endif %}
 {%         if vrf.address_family_ipv6_multicast is arista.avd.defined %}
@@ -1734,6 +1813,22 @@ router bgp {{ router_bgp.as }}
 {%                     set network_cli = network_cli ~ " route-map " ~ network.route_map %}
 {%                 endif %}
          {{ network_cli }}
+{%             endfor %}
+{%             for redistribute_route in vrf.address_family_ipv6_multicast.redistribute_routes | arista.avd.natural_sort('source_protocol') %}
+{%                 if redistribute_route.source_protocol is arista.avd.defined %}
+{%                     set redistribute_route_cli = "redistribute " ~ redistribute_route.source_protocol %}
+{%                     if redistribute_route.include_leaked is arista.avd.defined and redistribute_route.source_protocol == "isis" %}
+{%                         set redistribute_route_cli = redistribute_route_cli ~ " include leaked" %}
+{%                     endif %}
+{%                     if redistribute_route.route_map is arista.avd.defined %}
+{%                         set redistribute_route_cli = redistribute_route_cli ~ " route-map " ~ redistribute_route.route_map %}
+{%                     elif redistribute_route.source_protocol == "isis" %}
+{%                         if redistribute_route.rcf is arista.avd.defined %}
+{%                             set redistribute_route_cli = redistribute_route_cli ~ " rcf " ~ redistribute_route.rcf %}
+{%                         endif %}
+{%                     endif %}
+         {{ redistribute_route_cli }}
+{%                 endif %}
 {%             endfor %}
 {%         endif %}
 {%         for  address_family in vrf.address_families | arista.avd.natural_sort('address_family') %}
