--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/templates/eos/router-isis.j2
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/templates/eos/router-isis.j2
@@ -78,11 +78,18 @@ router isis {{ router_isis.instance }}
    advertise passive-only
 {%     endif %}
 {%     if router_isis.spf_interval.interval is arista.avd.defined %}
-{%         if router_isis.spf_interval.wait_interval is arista.avd.defined %}
-   spf-interval {{ router_isis.spf_interval.interval }} {{ router_isis.spf_interval.wait_interval }}
-{%         else %}
-   spf-interval {{ router_isis.spf_interval.interval }}
+{%         set spf_interval_cli = "spf-interval " ~ router_isis.spf_interval.interval %}
+{%         if router_isis.spf_interval.interval_unit is arista.avd.defined %}
+{%             set spf_interval_cli = spf_interval_cli ~ " " ~ router_isis.spf_interval.interval_unit %}
+{%             set wait_hold_interval_unit = " milliseconds" %}
 {%         endif %}
+{%         if router_isis.spf_interval.wait_interval is arista.avd.defined %}
+{%             set spf_interval_cli = spf_interval_cli ~ " " ~ router_isis.spf_interval.wait_interval ~ wait_hold_interval_unit | arista.avd.default("") %}
+{%             if router_isis.spf_interval.hold_interval is arista.avd.defined %}
+{%                 set spf_interval_cli = spf_interval_cli ~ " " ~ router_isis.spf_interval.hold_interval ~ wait_hold_interval_unit | arista.avd.default("") %}
+{%             endif %}
+{%         endif %}
+   {{ spf_interval_cli }}
 {%     endif %}
 {%     if router_isis.authentication.both.mode is arista.avd.defined
           and (router_isis.authentication.both.mode in ["md5", "text"]
