Apply suggestions from code review

--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/templates/documentation/logging.j2
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/templates/documentation/logging.j2
@@ -71,11 +71,11 @@
 {%     endif %}
 {%     if logging.level is arista.avd.defined %}
 
-| Level Facility | Severity |
+| Facility | Severity |
 | -------------- | -------- |
-{%         for level in logging.level | arista.avd.natural_sort('facility_name') %}
+{%         for level in logging.level | arista.avd.natural_sort('facility') %}
 {%             if level.severity is arista.avd.defined %}
-| {{ level.facility_name }} | {{ level.severity }} |
+| {{ level.facility }} | {{ level.severity }} |
 {%             endif %}
 {%         endfor %}
 {%     endif %}
